Always synchronize the cache with the filesystem on startup to not miss any changes to the filesystem that has been done while Akonadi is not running

BUG: 237127

svn path=/trunk/KDE/kdepim/runtime/; revision=1127307